--- a/decode/decode.vcxproj.filters
+++ b/decode/decode.vcxproj.filters
@@ -72,4 +72,7 @@
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="examples" />
+  </ItemGroup>
 </Project>
