Remove Windows dependent character "^M" from jpeg-9a/config.guess, jpeg-9a/config.sub, jpeg-9a/configure.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,10 @@ CMakeFiles/
 *.vspx
 *.a
 
+# auto generated files in jpeg folder
+jpeg-9a/config.log
+jpeg-9a/config.status
+jpeg-9a/jconfig.h
+jpeg-9a/libtool
+jpeg-9a/Makefile
+jpeg-9a/stamp-h1
