Ignore files generated by configure in jpeg-9a.

--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,18 @@ CMakeFiles/
 
 # auto generated files in jpeg folder
 jpeg-9a/.deps/
+jpeg-9a/.libs/
 jpeg-9a/config.log
 jpeg-9a/config.status
 jpeg-9a/jconfig.h
 jpeg-9a/libtool
 jpeg-9a/Makefile
 jpeg-9a/stamp-h1
+jpeg-9a/*.o
+jpeg-9a/*.lo
+jpeg-9a/cjpeg
+jpeg-9a/djpeg
+jpeg-9a/jpegtran
+jpeg-9a/libjpeg.la
+jpeg-9a/rdjpgcom
+jpeg-9a/wrjpgcom
